ocaml (3.10.0-2) UNRELEASED; urgency=low

  * Policy
    - update the Vcs-Svn info to the latest PTS documentation
    - describe dependencies from a -dev package to its companion shared stub
      package (if any) and suggest the usage of ${binary:Version}
  * debian/copyright
    - added in place of copyright.in, nothing to replace there
  * debian/man/camlp4*.1
    - added manpages for camlp4 related executables; content partially using
      html2man, partially taken from the camlp4 wiki

 -- Stefano Zacchiroli <zack@debian.org>  Thu, 14 Jun 2007 22:20:02 +0100

ocaml (3.10.0-1) experimental; urgency=low

  [ Stefano Zacchiroli ]
  * New upstream (stable) release
  * debian/patches/*
    - removed: ocaml-interp_manpage, build_wo_debug_info (integrated upstream)
    - updated: install_ocamlbuild
  * ship ocaml-compiler-libs objects as STDLIB/ocaml-compiler-libs/{parsing/,
    typing/, utils/} rather than as a flat dir tree
  * re-enabled ocaml-source package (which ships
    /usr/src/ocaml-3.10.0.tar.bz2), now with a better way to generate it:
    everything in the build dir except debian/ will be copied in the resulting
    tarball
  * debian/ocaml-source.exclude
    - new file: list of tar exclude patterns, matching file won't be shipped
      in the ocaml source tarball

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 13 Jun 2007 17:19:10 +0200

ocaml (3.10.0~beta-1) experimental; urgency=low

  [ Samuel Mimram ]
  * Ship dh_ocaml into ocaml-nox

  [ Stefano Zacchiroli ]
  * New upstream beta release (3.10.0).
  * debian/patches/*
    - removed: versioned_libdir (no longer needed with this upstream)
    - ported to this upstream: call_ld_with_proper_flags, alpha_ld_no-relax,
      no_rpath
    - added: build_wo_debug_info.dpatch (avoid building camlp4/ocamldoc with
      debug info, wont be needed for the stable release)
  * CDBS class
    - added support for the OCAML_DLL_DIR variable, pointing ATM to the