@@ -1,0 +1,10 @@
+usr/bin/camlp4boot
+usr/bin/camlp4of
+usr/bin/camlp4rf
+usr/bin/camlp4oof
+usr/bin/camlp4orf
+usr/bin/camlp4prof
+usr/lib/ocaml/#OcamlABI#/camlp4/camlp4of.cma
+usr/lib/ocaml/#OcamlABI#/camlp4/camlp4rf.cma
+usr/lib/ocaml/#OcamlABI#/camlp4/camlp4oof.cma
+usr/lib/ocaml/#OcamlABI#/camlp4/camlp4orf.cma
