@@ -1,0 +1,5 @@
+usr/bin/camlp4of.opt
+usr/bin/camlp4rf.opt
+usr/bin/camlp4oof.opt
+usr/bin/camlp4orf.opt
+usr/bin/camlp4prof.opt
