@@ -1,5 +1,7 @@
 ocaml (3.10.0-2) UNRELEASED; urgency=low
 
+  * Split two new packages: "camlp4" and "camlp4-extra" to cope with the huge
+    size increase of the new camlp4
   * Policy
     - update the Vcs-Svn info to the latest PTS documentation
     - describe dependencies from a -dev package to its companion shared stub
@@ -9,8 +11,12 @@ ocaml (3.10.0-2) UNRELEASED; urgency=low
   * debian/man/camlp4*.1
     - added manpages for camlp4 related executables; content partially using
       html2man, partially taken from the camlp4 wiki
+  * debian/control
+    - moved ledit recommends from ocaml-nox to ocaml-interp (which ships the
+      interactive toplevel)
+    - minor improvements to various descriptions
 
- -- Stefano Zacchiroli <zack@debian.org>  Thu, 14 Jun 2007 22:20:02 +0100
+ -- Stefano Zacchiroli <zack@debian.org>  Fri, 15 Jun 2007 23:43:41 +0100
 
 ocaml (3.10.0-1) experimental; urgency=low
 
